--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "async": "^2.5.0",
+    "axios": "^0.17.0",
     "express": "^4.16.2",
+    "guid": "0.0.12",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.13",
